# pdf-to-es

./: .env.example  .gitignore  README.md  main.py  markdown_to_pdf.py  markdown_translator.py  pyproject.toml
.github/: copilot-instructions.md
prompts/: translation_prompt.txt
